# healthlife-ai

./: .env.example  .gitignore  ARCHITECTURE.md  COMPONENTS_GUIDE.md  CONTRIBUTING.md  FOCUS_COMPONENTS_GUIDE.md  LEARNING_GUIDE.md  PHASE4_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.md  TODO.md  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  Dockerfile  README_MIGRATIONS.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: analytics.py  auth.py  coach.py  journey.py  plans.py  tasks.py  users.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/crud/: __init__.py  daily_metric.py  plan.py  task.py  user.py
apps/backend/app/db/: base.py  base_class.py  session.py
apps/backend/app/models/: __init__.py  biometric.py  daily_metric.py  plan.py  task.py  user.py
apps/backend/app/schemas/: __init__.py  analytics.py  auth.py  biometric.py  coach.py  daily_metric.py  journey.py  plan.py  task.py  user.py
apps/backend/app/services/: body_battery.py  openai_service.py
apps/backend/app/services/ai_engine/: __init__.py  failure_recovery.py  plan_generator.py  task_adapter.py
apps/backend/app/services/recovery/: __init__.py
apps/backend/migrations/: add_daily_metrics.sql
apps/web/: .env.example  AUTH.md  COACH_COMPONENTS_GUIDE.md  INTEGRATION.md  JOURNEY_COMPONENTS_GUIDE.md  next.config.js  (+4 more)
scripts/: setup.sh
(+56 files in other folders)
